# KernelReorderTool

./: .gitignore  .gitmodules  Hang.new  Makefile  MatrixMultiplication  MatrixMultiplication.cpp  README.md  edit_kernel.cpp  extend_text.cpp  insert_tramp.cpp  merge_kernel.cpp  set_register_usage.cpp  split_kernel.cpp  test_acc.cpp  test_acc.sh  test_counter.cpp  test_counter.sh  test_dct_acc.sh  test_getreg.sh  test_insert.sh  test_mm.sh  test_mm_acc.sh  test_modify_lds_size.sh  tmp.s  tmp_00.hsaco
DCT/: .bb_file.swp  bb_file  dct  dct.new  test.config  tmp
MM/: MatrixMultiplication.new  bb_file  test.config
b+tree/: 1-0.txt  b+tree.base  b+tree.base.k1.new  b+tree.base.new  b+tree.instr.k1.new  b+tree.instr.k1.new.perf  b+tree.instr.new  b+tree_1.perf  b+tree_2.perf  backup.hsaco  c_overhead.py  fmeta_data.txt  k1.ini  output.txt  result.base.k1.txt  result.instr.k1.txt  run.sh  test_base.sh  test_instr.sh  tmp_00.hsaco  tmp_01.hsaco
backprop/: 1-0.txt  backprop.base  backprop.base.k1.new  backprop.base.new  backprop.instr.k1.new  backprop.instr.k2.new  backprop.instr.new  backprop.perf  backup.hsaco  both.ini  c_overhead.py  config.ini  fmeta_data.txt  k1.ini  log  measure.sh  out  result.base.k1.txt  result.base.k2.txt  result.base.txt  result.instr.k1.txt  result.instr.k2.txt  run.sh  test_base.sh  test_instr.sh  tmp_00.hsaco  tmp_01.hsaco
bfs/: .1-0.txt.swp  .gdbinit  1-0.txt  backup.hsaco  bfs.base  bfs.base.new  bfs.instr.new  config.ini  fmeta_data.txt  k1.base.out  k1.instr.out  k1.out  out  parse2.py  result.txt  run  run.base  run.instr  test_base.sh  test_insert.sh  test_instr.sh  tmp_00.hsaco  tmp_00.note.new  tmp_00.note.old
dct/: bb_file  dct  dct-backup  dct.new  test.config
include/: InsnFactory.h  InstrUtil.h  kernel_elf_helper.h
lavaMD/: .orig.s.swp  1-0.txt  backup.hsaco  config.ini  fmeta_data.txt  lavaMD.base.exe.new  lavaMD.exe.new  log  out  out.qq  result.base  result.new  result_parser.py  run  run.new  run.new.base  run.old  test_base.sh  test_insert.sh  test_updated.sh  tmp_00.hsaco  wrong.hsaco
lib/: InsnFactory.cpp  InsnFactory.h  InstrUtil.cpp  InstrUtil.h  kernel_descriptor.h  kernel_elf_helper.cpp  kernel_elf_helper.h
preload/: .gdbinit  Makefile  audit.cpp  init2  (+11 more)
simple/snippetGenerator/: CMakeLists.txt  config.cpp  kernel_elf_helper.cpp  snippetGenerator.cpp
simple/snippetGenerator/amdgpu-tooling/: kd-tool.cpp
simple/snippetInserter/: CMakeLists.txt  config.cpp  config.h  kernel_elf_helper.cpp  kernel_elf_helper.h  snippetInserter.cpp
simple/snippetReader/: CMakeLists.txt  config.h  snippetReader.cpp
simple/snippetReader/amdgpu-tooling/: CMakeLists.txt  KdUtils.cpp  KdUtils.h  KernelDescriptor.cpp  KernelDescriptor.h
(+104 files in other folders)
